<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:gravity="center|start"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_repositorio_nome"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:padding="5dp"
                                android:text="@string/labe_nome_repositorio"
                                android:textAlignment="viewStart"
                                android:textColor="@color/primary"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/tv_repositorio_visibilidade"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.2"
                                android:background="@drawable/rounded_corner"
                                android:padding="10dp"
                                android:text="@string/label_lista_item_repositorio_visibilidade"
                                android:textAlignment="center"
                                android:textColor="#FFFFFF"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:cardCornerRadius="0dp"
                            app:cardElevation="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tv_repositorio_descricao"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginEnd="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_weight="1"
                                    android:padding="5dp"
                                    android:text="@string/label_lista_item_repositorio_descricao"
                                    android:textAlignment="viewStart"
                                    android:textColor="#000000"
                                    android:textSize="24sp" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="8dp"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/tv_repositorio_linguagem"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:padding="5dp"
                                        android:text="@string/label_lista_item_repositorio_linguagem"
                                        android:textAlignment="center"
                                        android:textColor="#000000"
                                        android:textSize="16sp" />

                                    <TextView
                                        android:id="@+id/tv_repositorio_licensa"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:ellipsize="marquee"
                                        android:padding="5dp"
                                        android:text="@string/label_lista_item_repositorio_licensa"
                                        android:textAlignment="center"
                                        android:textColor="#000000"
                                        android:textSize="16sp" />

                                    <TextView
                                        android:id="@+id/tv_repositorio_data_atualizacao"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:padding="5dp"
                                        android:text="@string/label_lista_item_repositorio_atualizacao"
                                        android:textAlignment="center"
                                        android:textColor="#000000"
                                        android:textSize="16sp" />
                                </LinearLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>